--- a/_posts/2021-06-07-where.md
+++ b/_posts/2021-06-07-where.md
@@ -42,4 +42,4 @@ having sum(price*amount) >= (select sum(price*amount)
 
 name을 기준으로 그룹을 만들어주고 HAVING절을 이용해 매출을 비교하니 잘 출력된다.
 
-![sqlresult](/assets/images/SpringBoot/5/sql.PNG)
+![sqlresult](/assets/images/5/sql.PNG)
