--- a/_posts/2021-09-15-algorithm-codeup100-1025.md
+++ b/_posts/2021-09-15-algorithm-codeup100-1025.md
@@ -4,11 +4,8 @@ toc: false
 tags:
 - codeup
 - 코드업
-- 기초
 - 알고리즘
-- 코딩
-- 1025번
-category: CodeUp
+category: algorithm
 ---
 
 ## 문제 설명
@@ -52,7 +49,7 @@ printf("[%d]", a*10000);
 
 ### 기본 풀이
 
-우선 기초다보니 아래 코드처럼 정말 쌩 노가다로 하나하나 찍길 바란 것 같은데
+우선 기초다보니 아래 코드처럼 정말 쌩 노가다로 하나하나 찍길 바란 것 같은데...
 
 
 ~~~c
